--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,10 +5,16 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  DOCKER_HUB: docker.io
+  DOCKER_USER: ${{ secrets.DOCKER_IO_USER }}
+  IS_RELEASE: ${{
+    startsWith( github.ref, 'refs/tags/release-' ) ||
+
 jobs:
    build:
     runs-on: ubuntu-latest
-      strategy:
+    strategy:
       matrix:
         python-version: [3.9]
 
@@ -34,3 +40,25 @@ jobs:
       - name: Test with pytest
         run: |
           pytest
+
+      - name: Build Docker Image
+        run: |
+          set -eux
+          REPO_NAME="$( basename "${GITHUB_REPOSITORY}" )"
+          REF_NAME="$( basename "${GITHUB_REF}" )"
+          echo "DOCKER_IMAGE=${REPO_NAME}:${REF_NAME}" >> "${GITHUB_ENV}"
+          docker build \
+            --file docker/Dockerfile \
+            --tag "${DOCKER_IMAGE}" \
+            .
+
+      - name: Publish Docker Image
+        run: |
+          function publish() {
+            set -eux
+            PUB_IMAGE="${DOCKER_HUB}/${DOCKER_USER}/${DOCKER_IMAGE}"
+            docker login "${DOCKER_HUB}" -u "${DOCKER_USER}" --password-stdin
+            docker image tag "${DOCKER_IMAGE}" "${PUB_IMAGE}"
+            docker image push "${PUB_IMAGE}"
+          }
+          echo "${{ secrets.DOCKER_IO_PASS }}" | publish
