--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,12 +40,16 @@ jobs:
         run: |
           pytest
 
-      - name: Build Docker Image
+      - name: Initialize Environment
         run: |
           set -eux
           REPO_NAME="$( basename "${GITHUB_REPOSITORY}" )"
           REF_NAME="$( basename "${GITHUB_REF}" )"
           echo "DOCKER_IMAGE=${REPO_NAME}:${REF_NAME}" >> "${GITHUB_ENV}"
+
+      - name: Build Docker Image
+        run: |
+          set -eux
           docker build \
             --file docker/Dockerfile \
             --tag "${DOCKER_IMAGE}" \
