--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,6 +46,7 @@ jobs:
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v3
+        if: github.event_name != 'pull_request'
         with:
           images: ${{ secrets.DOCKERHUB_USERNAME }}/example-publisher
 
