--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,17 +1,17 @@
-name: Docker
+name: Test and Build
 
 on:
   push:
+    branches:
+      - "main"
+    tags:
+      - "v*"
   pull_request:
-    branches: [ main ]
-
-env:
-  DOCKER_HUB: docker.io
-  DOCKER_USER: ${{ secrets.DOCKER_IO_USER }}
-  IS_RELEASE: ${{ startsWith( github.ref, 'refs/tags/release-' ) }}
+    branches:
+      - "main"
 
 jobs:
-   build:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -35,32 +35,33 @@ jobs:
           # Only stop the build if there are Python syntax errors or undefined names
           flake8 . --select=E9,F63,F7,F82
           flake8 . --exit-zero
- 
+
       - name: Test with pytest
         run: |
           pytest
 
-      - name: Initialize Environment
-        run: |
-          set -eux
-          REPO_NAME="$( basename "${GITHUB_REPOSITORY}" )"
-          REF_NAME="$( basename "${GITHUB_REF}" )"
-          echo "DOCKER_IMAGE=${REPO_NAME}:${REF_NAME}" >> "${GITHUB_ENV}"
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Build Docker Image
-        run: |
-          set -eux
-          docker build \
-            --tag "${DOCKER_IMAGE}" \
-            .
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v3
+        if: github.event_name != 'pull_request'
+        with:
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/example-publisher
 
-      - name: Publish Docker Image
-        run: |
-          function publish() {
-            set -eux
-            PUB_IMAGE="${DOCKER_HUB}/${DOCKER_USER}/${DOCKER_IMAGE}"
-            docker login "${DOCKER_HUB}" -u "${DOCKER_USER}" --password-stdin
-            docker image tag "${DOCKER_IMAGE}" "${PUB_IMAGE}"
-            docker image push "${PUB_IMAGE}"
-          }
-          echo "${{ secrets.DOCKER_IO_PASS }}" | publish
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        if: github.event_name != 'pull_request'
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          platforms: linux/amd64
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
