--- a/config/config.toml
+++ b/config/config.toml
@@ -3,16 +3,8 @@ endpoint = 'ws://127.0.0.1:8910'
 
 [publisher.coin_gecko]
 update_interval_secs = 15
-confidence = 10
-
-[publisher.aust]
-terra_rpc_node = 'https://lcd.terra.dev'
-chain_id = 'columbus-5'
-anchor_money_market_contract_address = 'terra1sepfj7s0aeg5967uxnfk4thzlerrsktkpelm5s'
-update_interval_secs = 60
-pythd_symbol = 'Crypto.AUST/UST'
-confidence_bps = 10
+confidence_ratio_bps = 10
 
 [[ publisher.products ]]
-pythd_symbol = 'Crypto.AUST/UST'
-coin_gecko_id = 'anchorust'
+pythd_symbol = 'Crypto.BTC/USD'
+coin_gecko_id = 'bitcoin'
