Refactor and add Pythnet replicator

--- a/config/config.toml
+++ b/config/config.toml
@@ -1,13 +1,24 @@
 [publisher]
-provider_engine = 'coin_gecko'
+
+# Set it to either 'coin_gecko' or 'pyth_replicator'. You need to provide
+# the configuration for the chosen engine as described below.
+provider_engine = 'pyth_replicator'
+
+product_update_interval_secs = 10
 
 [publisher.pythd]
 endpoint = 'ws://127.0.0.1:8910'
 
-[publisher.coin_gecko]
-update_interval_secs = 15
-confidence_ratio_bps = 10
+# [publisher.coin_gecko]
+# update_interval_secs = 15
+# confidence_ratio_bps = 10
 
-[[ publisher.products ]]
-pythd_symbol = 'Crypto.BTC/USD'
-coin_gecko_id = 'bitcoin'
+# [[publisher.coin_gecko.products]]
+# symbol = 'Crypto.BTC/USD'
+# coin_gecko_id = 'bitcoin'
+
+[publisher.pyth_replicator]
+http_endpoint = 'https://pythnet.rpcpool.com'
+ws_endpoint = 'wss://pythnet.rpcpool.com'
+first_mapping = 'AHtgzX45WTKfkPG53L6WYhGEXwQkN1BVknET3sVsLL8J'
+program_key = 'FsJ3A3u2vn5cTVofAjvy6y5kwABJAqYWpe4975bi2epH'
