--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,37 @@
+[tool.poetry]
+name = "example-publisher"
+version = "1.0.0"
+description = ""
+authors = []
+license = "Apache-2"
+readme = "README.md"
+packages = [{include = "example_publisher"}]
+
+[tool.poetry.scripts]
+example-publisher = "example_publisher.__main__:main"
+
+[tool.pytest.ini_options]
+addopts = "--verbose --strict-markers -p no:doctest"
+norecursedirs= ".git,.venv"
+
+[tool.poetry.dependencies]
+python = "^3.10"
+structlog = "^22.3.0"
+click = "^8.1.3"
+dataclasses-json = "^0.5.7"
+attr = "^0.3.2"
+numpy = "^1.24.2"
+jsonrpc-websocket = "^3.1.4"
+pycoingecko = "^2.2.0"
+typed-settings = "2.0.2"
+pythclient = "^0.1.4,"
+
+[tool.poetry.group.dev.dependencies]
+pylint = "^2.16.2"
+pep8 = "^1.7.1"
+flake8 = "^6.0.0"
+pytest = "^6.2.0"
+
 [build-system]
-requires = ["setuptools >= 59.6.0", "wheel"]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
