--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -19,4 +19,5 @@ jobs:
           poetry-version: '1.3.2'
       - name: Install dependencies
         run: poetry install
-      - uses: pre-commit/action@v2.0.3
+      - name: Run pre-commit
+        run: poetry run pre-commit run --all-files
