--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,3 +14,7 @@ repos:
   rev: 6.0.0
   hooks:
   - id: flake8
+- repo: https://github.com/fsouza/mirrors-pyright
+  rev: v1.1.354
+  hooks:
+  - id: pyright
