--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,12 +18,12 @@ norecursedirs= ".git,.venv"
 python = "^3.10"
 structlog = "^22.3.0"
 click = "^8.1.3"
-dataclasses-json = "^0.5.7"
+dataclasses-json = "^0.6.4"
 attr = "^0.3.2"
 numpy = "^1.24.2"
 jsonrpc-websocket = "^3.1.4"
 pycoingecko = "^2.2.0"
-typed-settings = "2.0.2"
+typed-settings = "24.2.0"
 pythclient = "^0.1.4,"
 fastapi = "^0.110.0"
 uvicorn = {extras = ["standard"], version = "^0.28.0"}
@@ -33,6 +33,7 @@ pylint = "^2.16.2"
 pep8 = "^1.7.1"
 flake8 = "^6.0.0"
 pytest = "^6.2.0"
+pre-commit = "^3.6.2"
 
 [build-system]
 requires = ["poetry-core"]
