--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -57,3 +57,4 @@ websockets==12.0 ; python_version >= "3.10" and python_version < "4.0"
 win32-setctime==1.1.0 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32"
 yarl==1.8.2 ; python_version >= "3.10" and python_version < "4.0"
 pytest==8.2.2 ; python_version >= "3.10" and python_version < "4.0"
+black==24.4.2 ; python_version >= "3.10" and python_version < "4.0"
