--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "example-publisher"
-version = "1.1.2"
+version = "1.2.0"
 description = ""
 authors = []
 license = "Apache-2"
@@ -21,12 +21,12 @@ click = "^8.1.3"
 dataclasses-json = "^0.6.4"
 attr = "^0.3.2"
 numpy = "^1.24.2"
-jsonrpc-websocket = "^3.1.4"
 pycoingecko = "^2.2.0"
 typed-settings = "24.2.0"
 pythclient = "^0.1.4,"
 fastapi = "^0.110.0"
 uvicorn = {extras = ["standard"], version = "^0.28.0"}
+websockets = "^13.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.16.2"
